adapt for x-rays
MCS->MCX where appropriate
autochanged neutron -< x-ray

git-svn-id: https://svn.mccode.org/svn/McStasTeX@254 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/abstractpage.tex
+++ b/trunk/abstractpage.tex
@@ -11,10 +11,10 @@ The authors are:
 \begin{quote}
 \label{p:authors}
 Erik B Knudsen \verb+<erkn@risoe.dtu.dk>+ \\
-Materials Research Department, Ris{\o} DTU, Roskilde, Denmark 
+Materials Research Division, Ris{\o} DTU, Roskilde, Denmark 
 
 Peter Kj\ae r Willendrup \verb+<peter.willendrup@risoe.dk>+ \\
-Materials Research Department, Ris{\o} DTU, Roskilde, Denmark 
+Materials Research Division, Ris{\o} DTU, Roskilde, Denmark 
 
 Emmanuel Farhi \verb+<farhi@ill.fr>+ \\
 Institut Laue-Langevin, Grenoble, France 
