oops - that should have gone in a branch, apologies averyone
git-svn-id: https://svn.mccode.org/svn/McStasTeX@255 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/install.tex
+++ b/trunk/install.tex
@@ -1,4 +1,4 @@
-\chapter{Installing \MCX}
+\chapter{Installing \MCS}
 \label{installing}
 \index{Environment variable!MCSTAS\_CC}
 \index{Environment variable!MCSTAS\_CFLAGS}
@@ -7,5 +7,5 @@
 \index{Installing}
 The information in this chapter is also available as a separate
 html/ps/pdf document in the \texttt{install\_docs/} folder of your
-\MCX\ installation package.
+\MCS\ installation package.
 \input{../../McCode/trunk/doc/install_docs/tex/install_meat.tex}
