--- a/trunk/manual.tex
+++ b/trunk/manual.tex
@@ -45,17 +45,16 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}}
 
-\newcommand{\MCX}{{McXtrace}}
 \newcommand{\MCS}{{McStas}}
-\newcommand{\version}{{1.0_rc1}}
-\newcommand{\reldate}{{Oct, 2010}}
+\newcommand{\version}{{1.12}}
+\newcommand{\reldate}{{May, 2008}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
 \makeindex
 
-%\title{User and programmers guide\\ to the X ray-tracing package
-% \MCX ,\\ \version}
+%\title{User and programmers guide\\ to the neutron ray-tracing package
+% \MCS ,\\ version 1.7}
 %\author{Per-Olof \AA strand, Emmanuel Farhi, Kristian Nielsen, Kim Lefmann \\
 % Materials Research Department, \\
 % Ris\o\ National Laboratory, 4000 Roskilde, Denmark}
