--- a/trunk/techniq.tex
+++ b/trunk/techniq.tex
@@ -2,63 +2,29 @@
 \label{s:MCtechniques}\index{Monte Carlo method}
 
 This chapter explains the simulation strategy and the Monte Carlo
-techniques used in \MCX. We first explain the concept of the x-ray
+techniques used in \MCS. We first explain the concept of the neutron
 weight factor, and discuss the statistical errors in dealing with sums
-of x-ray weights.  Secondly, we give an expression for how the weight
+of neutron weights.  Secondly, we give an expression for how the weight
 factor transforms under a Monte Carlo choice and specialize this
 to the concept of direction focusing.  Finally, we present a way of
 generating random numbers with arbitrary distributions.
 More details are available in the Appendix concerning random numbers in the User manual.
 
 
-\section{X-ray simulations}
-%should talk about waveprop instead acceptance diagrams (although valid)
-X-ray scattering beamlines are built as a series of optical elements.
-Each of these elements modifies the beam characteristics (e.g. divergence,
-wavelength spread, spatial and temporal distributions) in a way which, for simple
-x-ray beam configurations, may be modelled with analytical methods. 
+\section{Neutron spectrometer simulations}
 
-%This is valid for individual elements such as guides \cite{Leibnitz63,Mildner90},
-%choppers \cite{Lowde60,Copley03}, Fermi choppers \cite{Fermi47,Peters05},
-%velocity selectors \cite{Clark66}, monochromators
-%\cite{Freund83,Sears97,Shirane02,Alianelli04}, and detectors
-%\cite{Radeka74,Charpak89,Manzin04}. 
-%In the case of a limited number of optical
-%elements, the so-called acceptance diagram theory
-%\cite{Mildner90,Copley93,Cussen03} may be used, within which the x-ray beam
-%distribution is considered to be homogeneous, triangular or Gaussian.
+Neutron scattering instruments are built as a series of neutron optics elements. Each of these elements modifies the beam characteristics (e.g. divergence, wavelength spread, spatial and time distributions) in a way which, for simple neutron beam configurations, may be modelled with analytical methods. This is valid for individual elements such as guides \cite{Leibnitz63,Mildner90}, choppers \cite{Lowde60,Copley03}, Fermi choppers \cite{Fermi47,Peters05}, velocity selectors \cite{Clark66}, monochromators \cite{Freund83,Sears97,Shirane02,Alianelli04}, and detectors \cite{Radeka74,Charpak89,Manzin04}. In the case of a limited number of optical elements, the so-called acceptance diagram theory \cite{Mildner90,Copley93,Cussen03} may be used, within which the neutron beam distributions are considered to be homogeneous, triangular or Gaussian.
+However, real neutron instruments are constituted of a large number of optical elements, and this brings additional complexity by introducing strong correlations between neutron beam parameters like divergence and position - which is the basis of the acceptance diagram method - but also wavelength and time. The usual analytical methods, such as phase-space theory, then reach their limit of validity in the description of the resulting effects.
 
-However, real x-ray beamlines consist of a large number of optical
-elements, and this brings additional complexity by introducing strong
-correlations between x-ray beam parameters like divergence and position - which
-is the basis of the acceptance diagram method - but also wavelength and time.
-The usual analytical methods, such as phase-space theory, then reach their
-limit of validity in the description of the resulting effects.
+In order to cope with this difficulty, Monte Carlo (MC) methods (for a general review, see Ref. \cite{James80}) may be applied to the simulation of neutron instruments.
+The use of probability is common place in the description of microscopic physical processes. Integrating these events (absorption, scattering, reflection, ...) over the neutron trajectories
+results in an estimation of measurable quantities characterizing the neutron instrument. Moreover, using variance reduction (importance sampling)
+where possible, reduces the computation time and gives better accuracy.
 
-%waveprop vs. 
-In order to cope with this difficulty, Monte Carlo (MC) methods (for a general review, see Ref. \cite{James80}) may be
-applied to the simulation of x-ray instruments. The use of probability is commonplace in the description of microscopic
-physical processes. Integrating these events (absorption, scattering, reflection, ...) over the x-ray trajectories
-results in an estimation of measurable quantities characterizing the beamline. Moreover, using variance reduction
-(importance sampling) where possible, reduces the computation time and gives better accuracy.
+Early implementations of the MC method for neutron instruments used \emph{home-made} computer programs  (see \cite{Copley86,Mildner77}) but, more recently, general packages have been designed, providing models for most optical components of neutron spectrometers.
+The most widely-used packages are NISP \cite{NISP}, ResTrax \cite{Restrax}, McStas \cite{nn_10_20,mcstas_webpage}, Vitess \cite{Vitess}, and IDEAS \cite{IDEAS}, which allow a wide range of neutron scattering instruments to be simulated.
 
-Implementations of the MC mathod for X-ray beamlines alreazdy exist 
-Early implementations of the MC method for x-ray instruments used
-\emph{home-made} computer programs  (see \cite{Copley86,Mildner77}) but, more
-recently, general packages have been designed, providing models for most
-optical components of x-ray spectrometers.
-
-The most widely-used packages are NISP \cite{Shadow}, ResTrax \cite{Restrax},
-McStas \cite{nn_10_20,mcstas_webpage}, Vitess \cite{Vitess}, and IDEAS
-\cite{IDEAS}, which allow a wide range of x-ray scattering instruments to be
-simulated.
-
-The ray-tracing Monte Carlo method has been used widely for guide studies
-\cite{Copley93,Farhi02,Schanzer04}, instrument optimisation and design
-\cite{Zsigmond04,Lieutenant05}. Most of the time, the conclusions and general
-behaviour of such studies may be obtained using the classical analytical
-approaches, but accurate estimates for the flux, resolution and generally the
-optimum parameter set, benefit considerably from MC methods.
+The neutron ray-tracing Monte Carlo method has been used widely for guide studies \cite{Copley93,Farhi02,Schanzer04}, instrument optimisation and design \cite{Zsigmond04,Lieutenant05}. Most of the time, the conclusions and general behaviour of such studies may be obtained using the classical analytical approaches, but accurate estimates for the flux, resolution and generally the optimum parameter set, benefit considerably from MC methods.
 
 \subsection{Monte Carlo ray tracing simulations}
 Mathematically, the Monte-Carlo method is an application of the law of large numbers \cite{James80,Grimmett92}. Let $f(u)$ be a finite continuous integrable function of parameter $u$ for which an integral estimate is desirable. The discrete statistical mean value of $f$ (computed as a series) in the uniformly sampled interval $a < u < b$ converges to the mathematical mean value of $f$ over the same interval.
@@ -69,29 +35,29 @@ Mathematically, the Monte-Carlo method is an application of the law of large num
 
 In the case were the $u_i$ values are regularly sampled, we come to the well known midpoint integration rule. In the case were the $u_i$ values are randomly (but uniformly) sampled, this is the Monte-Carlo integration technique. As random generators are not perfect, we rather talk about \emph{quasi}-Monte-Carlo technique. We encourage the reader to refer to James \cite{James80} for a detailed review on the Monte-Carlo method.
 
-\section{The x-ray weight}
+\section{The neutron weight}
 \label{s:probweight}
 A totally realistic semi-classical simulation will require that
-each x-ray is at any time either present or lost.
-On many beamlines, only a very
-small fraction of the initial x-rays will ever be detected, and
+each neutron is at any time either present or lost.
+In many instruments, only a very
+small fraction of the initial neutrons will ever be detected, and
 simulations of this kind will therefore waste much time in dealing
-with x-rays that never hit the detector.
+with neutrons that never hit the detector.
 
 An important way of speeding up calculations is to introduce
-a x-ray "weight factor" for each simulated ray and to
+a neutron "weight factor" for each simulated neutron ray and to
 adjust this weight according to the path of the ray.
 If {\em e.g.}\ the reflectivity of a certain
-optical component is 10\%, and only reflected x-rays ray are
-considered later in the simulations, the x-ray
+optical component is 10\%, and only reflected neutrons ray are
+considered later in the simulations, the neutron
 weight will be multiplied by 0.10 when passing this component,
-but every x-ray is allowed to reflect in the component.
+but every neutron is allowed to reflect in the component.
 In contrast, the totally realistic simulation of the component
-would require on average ten incoming x-rays for each reflected one.
+would require in average ten incoming neutrons for each reflected one.
 
-Let the initial x-ray weight be $p_0$ and let us denote the weight
+Let the initial neutron weight be $p_0$ and let us denote the weight
 multiplication factor in the $j$'th component by $\pi_j$.  The resulting
-weight factor for the x-ray ray after passage of the whole instrument
+weight factor for the neutron ray after passage of the whole instrument
 becomes the product of all contributions
 \begin{equation}
 \label{e:probprod}
@@ -119,8 +85,8 @@ whenever possible. This includes
 \label{s:staterror}
 
 In a typical simulation, the result will consist of a
-count of x-rays histories ("rays") with different weights. The
-sum of these weights is an estimate of the mean number of x-rays
+count of neutrons histories ("rays") with different weights. The
+sum of these weights is an estimate of the mean number of neutrons
 hitting the monitor (or detector) per second in a ``real'' experiment.
 One may write the counting result as
 \begin{equation}
@@ -134,19 +100,19 @@ mean value of $I$ is unchanged. However, $N$ will in general be enhanced,
 and this will improve the accuracy of the simulation.
 
 To give an estimate of the statistical error, we proceed as follows:
-Let us first for simplicity assume that all the counted x-ray weights are
+Let us first for simplicity assume that all the counted neutron weights are
 almost equal, $p_i \approx \overline{p}$,
-and that we observe a large number of x-rays, $N \geq 10$.
+and that we observe a large number of neutrons, $N \geq 10$.
 Then $N$ almost follows a normal distribution
 with the uncertainty $\sigma(N) = \sqrt{N}$
 \footnote{This is not correct in a
 situation where the detector counts a large fraction of the
-x-rays in the simulation, but we will neglect that for now.}.
+neutrons in the simulation, but we will neglect that for now.}.
 Hence, the statistical uncertainty of the observed intensity becomes
 \begin{equation} \label{e:sigI1}
  \sigma(I) = \sqrt{N} \overline{p} = I / \sqrt{N} ,
 \end{equation}
-as is used in real x-ray experiments (where $\overline{p} \equiv 1$).
+as is used in real neutron experiments (where $\overline{p} \equiv 1$).
 For a better approximation we return to Eq.~(\ref{psum}).
 Allowing variations in both $N$ and $\overline{p}$,
 we calculate the variance of the resulting intensity,
@@ -185,19 +151,19 @@ $N=\sum_i p_i^0, I=\sum_i p_i^1$, and $M_2 = \sum_i p_i^2$.
 \section{Weight factor transformations during a Monte Carlo
  choice}
 When a Monte Carlo choice must be performed, {\em e.g.} when the
-initial energy and direction of the x-ray ray is decided at the source,
-it is important to adjust the x-ray weight so that the combined
-effect of x-ray weight change and Monte Carlo probability
+initial energy and direction of the neutron ray is decided at the source,
+it is important to adjust the neutron weight so that the combined
+effect of neutron weight change and Monte Carlo probability
 of making this particular choice
 equals the actual physical properties we like to model.
 
 Let us follow up on the simple example of transmission.
-The probability of transmitting the real x-ray is $P$, but we make
-the Monte Carlo choice of transmitting the x-ray ray each time:
+The probability of transmitting the real neutron is $P$, but we make
+the Monte Carlo choice of transmitting the neutron ray each time:
 $f_{\rm MC}=1$. This must be reflected on the choice of weight multiplier
 $\pi_j$ given by the master equation
 %In the ``real'' semi-classical world, there is a distribution
-%(probability density) for the x-rays in the six dimensional
+%(probability density) for the neutrons in the six dimensional
 %(energy, direction, position) space of
 %$\Pi(E,\Ombold,{\bf r}) = dP/(dE d\Ombold d^3{\bf r})$ depending upon
 %the source temperature, geometry {\em etc.}\ In the
@@ -205,7 +171,7 @@ $\pi_j$ given by the master equation
 %in general picked from another distribution:
 %$f_{\rm MC}(E,\Ombold,{\bf r}) \neq \Pi(E, \Ombold,{\bf r})$,
 %since one would {\em e.g.} often generate
-%only x-rays within a certain parameter interval.
+%only neutrons within a certain parameter interval.
 %However, we must then require that the weights are adjusted
 %by a factor $\pi_j$ (in this case: $j=1$) so that
 \begin{equation} \label{probrule}
@@ -220,19 +186,19 @@ transmit only half of the rays $(f_{\rm MC}=0.5)$.
 An important different example
 is elastic scattering from a powder sample,
 where the Monte-Carlo choices are the particular powder line to scatter from,
-the scattering position within the sample and the final x-ray direction
+the scattering position within the sample and the final neutron direction
 within the Debye-Scherrer cone.
 
 \subsection{Direction focusing}
 \index{Monte Carlo method!Direction focusing}
 \label{s:focus}
 An important application of weight transformation is direction focusing.
-Assume that the sample scatters the x-rays in many directions.
-In general, only x-rays in some of these directions will
+Assume that the sample scatters the neutron rays in many directions.
+In general, only neutron rays in some of these directions will
 stand any chance of being detected. These directions we call
 the {\em interesting directions}.
 The idea in focusing is to avoid wasting computation time on
-x-rays scattered in the other directions.
+neutrons scattered in the other directions.
 This trick is an instance of what in Monte Carlo terminology
 is known as {\em importance sampling}. % \cite{importance}.
 
@@ -247,14 +213,14 @@ $\pi_j = |\Delta \Ombold| / (4 \pi)$.
 One thus ensures that the mean simulated intensity is unchanged
 during a "correct" direction focusing, while a too narrow focusing will
 result in a lower (\textit{i.e.} wrong) intensity, since
-we cut x-rays rays that should have reached the final detector.
+we cut neutrons rays that should have reached the final detector.
 
 \begin{figure}[htb!]
 \begin{center}
 \includegraphics[width=.8\textwidth]{figures/focusing}
 \end{center}
 \caption{Illustration of the effect of direction focusing in \MCS\
-  . Weights of x-rays emitted into a certain solid angle are
+  . Weights of neutrons emitted into a certain solid angle are
   scaled down by the full unit sphere area.}
 \label{fig:focusing}
 \end{figure}
@@ -273,14 +239,14 @@ found in the {\bf Source\_adapt} and {\bf Source\_Optimizer} components.
 
 An other class of efficiency improvement technique is the so-called \emph{stratified sampling}. It consists in partitioning the event distributions in representative sub-spaces, which are then all sampled individualy. The advantage is that we are then sure that each sub-space is well represented in the final integrals. This means that instead of shooting $N$ events, we define $D$ partitions and shoot $r=N/D$ events in each partition. In conjunction with adaptive sampling, we may define partitions so that they represent 'interesting' distributions, e.g. from events scattered on a monochromator or a sample. The sum of partitions should equal the total space integrated by the Monte Carlo method, and each partition must be sampled randomly.
 
-In the case of \MCS, the stratified sampling is used when repeating events, such as in the Virtual sources (Virtual\_input, Vitess\_input, Virtual\_mcnp\_input, Virtual\_tripoli4\_input) and when using the SPLIT keyword in the TRACE section on instrument descriptions. We emphasize here that the number of repetitions $r$ should not exceed the dimensionality of the Monte Carlo integration space (which is $d=10$ for x-ray events) and the dimensionality of the partition spaces, i.e. the number of random generators following the stratified sampling location in the instrument.
+In the case of \MCS, the stratified sampling is used when repeating events, such as in the Virtual sources (Virtual\_input, Vitess\_input, Virtual\_mcnp\_input, Virtual\_tripoli4\_input) and when using the SPLIT keyword in the TRACE section on instrument descriptions. We emphasize here that the number of repetitions $r$ should not exceed the dimensionality of the Monte Carlo integration space (which is $d=10$ for neutron events) and the dimensionality of the partition spaces, i.e. the number of random generators following the stratified sampling location in the instrument.
 
 \section{Accuracy of Monte Carlo simulations}
 \index{Monte Carlo method!Accuracy}
 
 When running a Monte Carlo, the meaningfull quantities are obtained by integrating random events into a single value (e.g. flux), or onto an histogram grid. The theory \cite{James80} shows that the accuracy of these estimates is a function of the space dimension $d$ and the number of events $N$. For large numbers $N$, the central limit theorem provides an estimate of the relative error as $1/\sqrt{N}$. However, the exact expression depends on the random distributions.
 
-\MCS\ uses a space with $d=10$ parameters to describe x-rays (position, velocity, spin, time). We show in Table \ref{t:mc_accuracy} a rough estimate of the accurarcy on integrals as a function of the number of records reaching the integration point. This stands both for integrated flux, as well as for histogram bins - for which the number of events per bin should be used for $N$.
+\MCS\ uses a space with $d=10$ parameters to describe neutrons (position, velocity, spin, time). We show in Table \ref{t:mc_accuracy} a rough estimate of the accurarcy on integrals as a function of the number of records reaching the integration point. This stands both for integrated flux, as well as for histogram bins - for which the number of events per bin should be used for $N$.
 
 \begin{table}
   \begin{center}
