--- a/branches/mcxtrace_1_0/abstractpage.tex
+++ b/branches/mcxtrace_1_0/abstractpage.tex
@@ -11,10 +11,10 @@ The authors are:
 \begin{quote}
 \label{p:authors}
 Erik B Knudsen \verb+<erkn@risoe.dtu.dk>+ \\
-Materials Research Department, Ris{\o} DTU, Roskilde, Denmark 
+Materials Research Division, Ris{\o} DTU, Roskilde, Denmark 
 
 Peter Kj\ae r Willendrup \verb+<peter.willendrup@risoe.dk>+ \\
-Materials Research Department, Ris{\o} DTU, Roskilde, Denmark 
+Materials Research Division, Ris{\o} DTU, Roskilde, Denmark 
 
 Emmanuel Farhi \verb+<farhi@ill.fr>+ \\
 Institut Laue-Langevin, Grenoble, France 
