--- a/branches/mcxtrace_1_0/manual.tex
+++ b/branches/mcxtrace_1_0/manual.tex
@@ -45,16 +45,17 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}}
 
+\newcommand{\MCX}{{McXtrace}}
 \newcommand{\MCS}{{McStas}}
-\newcommand{\version}{{1.12}}
-\newcommand{\reldate}{{May, 2008}}
+\newcommand{\version}{{1.0_rc1}}
+\newcommand{\reldate}{{Oct, 2010}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
 \makeindex
 
-%\title{User and programmers guide\\ to the neutron ray-tracing package
-% \MCS ,\\ version 1.7}
+%\title{User and programmers guide\\ to the X ray-tracing package
+% \MCX ,\\ \version}
 %\author{Per-Olof \AA strand, Emmanuel Farhi, Kristian Nielsen, Kim Lefmann \\
 % Materials Research Department, \\
 % Ris\o\ National Laboratory, 4000 Roskilde, Denmark}
