--- a/branches/mcxtrace_1_0/tof_monitor.tex
+++ b/branches/mcxtrace_1_0/tof_monitor.tex
@@ -1,28 +1,29 @@
 \section{TOF\_monitor: The time-of-flight monitor}
-\component{TOF\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $t_0$, $t_1$, filename}{$\Delta t$}{}
+\component{TOF\_monitor}{System}{$x_{\rm width}$, $y_{\rm height}$, $y_{\rm max}$, $n_{\rm t}$, $t_{\rm 0}$, $E_{\rm 1}$, filename}{ $x_{\rm min}$,$x_{\rm max}$, $y_{\rm min}$,$y_{\rm max}$,restore\_xray},{}
+%{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $t_0$, $t_1$, filename}{$\Delta t$}{}
 \index{Monitors!Time-of-flight monitor}
 
 The component {\bf TOF\_monitor} has a rectangular opening
 in the $(x,y)$ plane, given by the $x$ and $y$ parameters,
 like for {\bf Slit}.
-The neutron ray is propagated to the plane of the monitor
+The xray is propagated to the plane of the monitor
 by the kernel call PROP\_Z0.
-A neutron ray is counted if it passes within the rectangular opening
+An xray is counted if it passes within the rectangular opening
 given by the $x$ and $y$ limits.
 
 Special about {\bf TOF\_monitor} is that it is sensitive to
-the arrival time, $t$, of the neutron ray.
+the arrival time, $t$, of the xray.
 Like in a real time-of-flight detector, the time dimension is
 binned into small time intervals.
 Hence this monitor maintains a one-dimensional histogram of counts.
-The $n_{\rm chan}$ time intervals begin at $t_0$ and
+The $n_{\rm t}$ time intervals begin at $t_0$ and
 end at $t_1$ (alternatively, the interval length is specified by $\Delta t$).
-As usual in time-of-flight analysis, all times are given in units of $\mu$s.
+All times are given in units of $\mu$s.
 
 The output parameters from {\bf TOF\_monitor} are the three count numbers,
 $N, I$, and $M_2$ for the total counts in the monitor.
 In addition, a file, \verb+filename+, is produced with a list of
-the same three data divided in different TOF bins.
-This file can be read and plotted by the {\rm mcplot} tool; see the
+the same three sets of data divided in TOF bins.
+This file can be read and plotted by the {\rm mxplot} tool; for details see the
 System Manual.
 
