--- a/branches/mcxtrace_1_0/risoe-rep_comp-title.tex
+++ b/branches/mcxtrace_1_0/risoe-rep_comp-title.tex
@@ -43,8 +43,8 @@
 \def\month{5}                   % Released in November 2005
 % Need to match front page line breaking.
 \title{Component~Manual~for~\rlap{the}\\ % Avoid overfull message.
- Neutron~Ray-Tracing~Package\\
- \MCS, Version \version\ }
+ X-Ray-Tracing~Package\\
+ \MCX, Version \version\ }
 \author{Peter Kj\ae r Willendrup, Erik Knudsen, Kim Lefmann and\\Emmanuel Farhi}
 \maketitle
 \endgroup
