--- a/branches/mcxtrace_1_0/risoe-rep-title.tex
+++ b/branches/mcxtrace_1_0/risoe-rep-title.tex
@@ -43,8 +43,8 @@
 \def\month{5}                   % Released in November 2005
 % Need to match front page line breaking.
 \title{User~and~Programmers~Guide~to~\rlap{the}\\ % Avoid overfull message.
- Neutron~Ray-Tracing~Package\\
- \MCS, Version \version\ }
+ X-Ray-Tracing~Package\\
+ \MCX, Version \version\ }
 \author{Peter Willendrup, Erik Knudsen, Emmanuel Farhi and\\Kim Lefmann}
 
 \maketitle
