removed verb experiment
git-svn-id: https://svn.mccode.org/svn/McStasTeX@267 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/branches/mcxtrace_1_0/changes.tex
+++ b/branches/mcxtrace_1_0/changes.tex
@@ -65,7 +65,7 @@ All sources include focussed sampling for optimized calculations
 \item[E\_monitor] Int. vs. X-ray energy
 \item[L\_monitor] Int. vs. X-ray wavelength
 \item[PSD\_monitor] Int. spatial coordinates
-\item[\verb+PSD\_monitor\_4P+] Int. vs. latitude and longitude
+\item[PSD\_monitor\_4P] Int. vs. latitude and longitude
 \end{description}
 
 \subsection{Updated components}
