--- a/branches/mcxtrace_1_0/monitors.tex
+++ b/branches/mcxtrace_1_0/monitors.tex
@@ -16,7 +16,7 @@ just called {\bf monitors}.
 
 Another important difference between computer simulations
 and real experiments is
-that one may allow the monitor to be sensitive to any \xray property,
+that one may allow the monitor to be sensitive to any xray property,
 as {\em e.g.} direction, energy, and divergence, in addition to what
 is found in real-world detectors (space and time). One may, in
 fact, let the monitor    record correlations between these properties.
