--- a/branches/mcxtrace_1_0/preface_comp.tex
+++ b/branches/mcxtrace_1_0/preface_comp.tex
@@ -4,14 +4,14 @@
 \chapter*{Preface and acknowledgements}
 This document contains information on the x-ray scattering components
 which are the building blocks for defining instruments
-in the Monte Carlo Xray-tracing program \MCS\ version \version . The initial
+in the Monte Carlo Xray-tracing program \MCS version \version . The initial
 release in June 2011 of version 1.0 was presented in Ref.~\cite{nn_10_20}.
 The reader of this
 document is not supposed to have specific knowledge of xray scattering,
 but some basic understanding of physics is helpful in
 understanding the theoretical background for the component functionality.
 For details about setting up and running simulations, we refer to
-the \MCX\ system manual \cite{mcxtracemanual}.
+the \MCX system manual \cite{mcxtracemanual}.
 We assume familiarity with the use of
 the C programming language.
 
@@ -21,7 +21,7 @@ We would like to explicitly thank all the partners in this project:
 \begin{itemize}
 \item The European Synchrotron Radiation Facility (ESRF), Grenoble, France
 \item SAXSLAB Aps., Lundtofte, Denmark
-\item Risø DTU
+\item Risø DTU, Roskilde, Denmark
 \item \NBIlong
 \item \Lifelong
 \end{itemize}
