--- a/branches/mcxtrace_1_0/manual.tex
+++ b/branches/mcxtrace_1_0/manual.tex
@@ -47,8 +47,8 @@
 
 \newcommand{\MCX}{{McXtrace}}
 \newcommand{\MCS}{{McStas}}
-\newcommand{\version}{{1.0_rc1}}
-\newcommand{\reldate}{{Oct, 2010}}
+\newcommand{\version}{{1.0\_rc1}}
+\newcommand{\reldate}{{Apr, 2011}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
 
 % enable index generation
