fixed for xrays
common text is now in abstract_common.tex, author list still need
editing

git-svn-id: https://svn.mccode.org/svn/McStasTeX@276 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/branches/mcxtrace_1_0/abstractpage.tex
+++ b/branches/mcxtrace_1_0/abstractpage.tex
@@ -1,11 +1,19 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \begin{abstract}
-\input{abstract}
+\input{abstract_common.tex}
+
+This report constitutes the reference manual for McXtrace, and,
+together with the manual for the McXtrace components, it
+contains full documentation of all aspects of the program. It covers
+the various ways to compile and run simulations, a description of the
+meta-language used to define simulations, 
+and some example simulations performed with
+the program.
 \end{abstract}
 
 \vskip\baselineskip\noindent
-This report documents \MCS\ version \version, released \reldate
+This report documents \MCX\ version \version, released \reldate
 \vskip\baselineskip\noindent
 The authors are:
 \begin{quote}
