--- a/branches/mcxtrace_1_0/abstractpage_comp.tex
+++ b/branches/mcxtrace_1_0/abstractpage_comp.tex
@@ -1,11 +1,18 @@
 % Emacs settings: -*-mode: latex; TeX-master: "manual.tex"; -*-
 
 \begin{abstract}
-\input{abstract_comp}
+\input{abstract_common}
+This report constitutes the component manual for McXtrace, and,
+together with the manual for the McXtrace system, it
+contains full documentation of all aspects of the program. It covers
+a description of all official components of the \MCX package with
+some theoretical background. Selected test
+instruments and representative \MCX\ simulations performed with these
+instruments are described in the User Manual.
 \end{abstract}
 
 \vskip\baselineskip\noindent
-This report documents the components for McStas version \version,
+This report documents the components for \MCX version \version,
 released \reldate .
 \vskip\baselineskip\noindent
 The authors are:
